2.4.40 (2024-12-12)

- Enhanced Split Screen mode, now promoted from beta to stable.
- Python Code Interpreter tool added to the Tabs.
- HTML/JS Canvas tool added to the Tabs.
- Added attachment icon to the context list if context has attachments.
- Added a thumbnail image to web search results.
- Added a new commands to web search: "extract_images" and "extract_links".
- Added the option "Use raw content (without summarization)" to the web search plugin, which provides a more detailed result to the main model.
- Extended the default maximum result characters to 50,000 in the web search plugin.

2.4.39 (2024-12-09)

- Added "Split Screen" mode (accessible via the switch in the bottom-right corner of the screen), which allows you to work in two windows simultaneously. It is currently experimental (beta). Future updates will include Code Interpreter and Canvas running in tabs.

- Fixed: Language switch.

2.4.38 (2024-12-08)

- Added the ability to select a style for chat display between: Blocks, ChatGPT-like, and ChatGPT-like Wide. New option in the menu: Config -> Theme -> Style...
- Added configuration options for audio input in Settings -> Audio -> Audio Input Device, Channels, and Sampling rate.

2.4.37 (2024-11-30)

- The `Query only` mode in `Uploaded` tab has been renamed to `RAG`.
- New options have been added under `Settings -> Files and Attachments`: 
  - `Use history in RAG query`: When enabled, the content of the entire conversation will be used when preparing a query if the mode is set to RAG or Summary.
  - `RAG limit`: This option is applicable only if 'Use history in RAG query' is enabled. It specifies the limit on how many recent entries in the conversation will be used when generating a query for RAG. A value of 0 indicates no limit.
- Cache: dynamic parts of the system prompt (from plugins) have been moved to the very end of the prompt stack to enable the use of prompt cache mechanisms in OpenAI.

2.4.36 (2024-11-28)
