@@ -3883,6 +3883,7 @@ may consume additional tokens that are not displayed in the main window.
 - Python Code Interpreter tool added to the Tabs.
 - HTML/JS Canvas tool added to the Tabs.
 - Added attachment icon to the context list if context has attachments.
+- Improved web search.
 - Added a thumbnail image to web search results.
 - Added a new commands to web search: "extract_images" and "extract_links".
 - Added the option "Use raw content (without summarization)" to the web search plugin, which provides a more detailed result to the main model.
