@@ -14,19 +14,19 @@ cmd.web_extract_images.description = If enabled, model will be able to open URL 
 cmd.web_index.description = Enable `web_index` command execution.\nIf enabled, the model will be able to index pages and external content using LlamaIndex (persistent index).
 cmd.web_index.label = Enable: indexing web and external content
 cmd.web_index_query.description = Enable `web_index_query` command execution.\nIf enabled, the model will be able to quickly index and query web content using LlamaIndex (in-memory index).
-cmd.web_index_query.label = Enable: quick query the web and external content
-cmd.web_index_query.tooltip = Example prompt: Query the website http://example.com about (question).
-cmd.web_index.tooltip = Example prompt: Index the website http://example.com.
-cmd.web_search.description = Enable `web_search` command execution.\nIf enabled, the model will be able to search the web.
-cmd.web_search.label = Enable: search the web
-cmd.web_search.tooltip = Example prompt: Search the web for (question).
+cmd.web_index_query.label = Enable: quick query the Web and external content
+cmd.web_index_query.tooltip = Example prompt: Query the Website http://example.com about (question).
+cmd.web_index.tooltip = Example prompt: Index the Website http://example.com.
+cmd.web_search.description = Enable `web_search` command execution.\nIf enabled, the model will be able to search the Web.
+cmd.web_search.label = Enable: search the Web
+cmd.web_search.tooltip = Example prompt: Search the Web for (question).
 cmd.web_url_open.description = Enable `web_url_open` command execution.\nIf enabled, the model will be able to open a specified URL and summarize the content.
 cmd.web_url_open.label = Enable: opening URLs
-cmd.web_url_open.tooltip = Example prompt: Read the website http://example.com.
+cmd.web_url_open.tooltip = Example prompt: Read the Website http://example.com.
 cmd.web_url_raw.description = Enable `web_url_raw` command execution.\nIf enabled, the model will be able to open a specified URL and get the raw content.
 cmd.web_url_raw.label = Enable: reading the raw content from URLs
 cmd.web_url_raw.tooltip = Example prompt: Give me the raw content of http://example.com.
-cmd.web_urls.description = Enable `web_urls` command execution.\nIf enabled, the model will be able to search the web and get a list of found URLs.
+cmd.web_urls.description = Enable `web_urls` command execution.\nIf enabled, the model will be able to search the Web and get a list of found URLs.
 cmd.web_urls.label = Enable: getting a list of URLs from search results
 cmd.web_urls.tooltip = Example prompt: Give me the list of URLs for query (question).
 disable_ssl.description = Disables SSL verification when crawling web pages.
@@ -37,6 +37,10 @@ google_api_key.description = You can obtain your own API key at https://develope
 google_api_key.label = Google Custom Search API KEY
 idx.description = ID of the index to use for web page indexing (persistent index).
 idx.label = Index to use
+img_thumbnail.description = Enable fetching thumbnails from opened websites.
+img_thumbnail.label = Show thumbnail images
+max_open_urls.label = Number of max URLs to open at once
+max_open_urls.description = Number of max URLs to open at once
 max_page_content_length.description = Maximum characters of page content to retrieve (0 = unlimited).
 max_page_content_length.label = Max content characters
 max_result_length.description = Maximum length of the summarized or raw result (characters). (0 = unlimited).
@@ -46,7 +50,7 @@ model_tmp_query.label = Model for querying in-memory index
 model_tmp_query.tooltip = Model used to query the temporary index for the `web_index_query` command (in-memory index)
 num_pages.description = Maximum number of pages to search per query.
 num_pages.label = Number of pages to search
-plugin.description = Provides the ability to connect to the web, search web pages for current data, and index external content using LlamaIndex data loaders.
+plugin.description = Provides the ability to connect to the Web, search web pages for current data, and index external content using LlamaIndex data loaders.
 plugin.name = Web Search
 prompt_summarize.description = Prompt used for summarizing web search results, use {query} as a placeholder for the search query.
 prompt_summarize.label = Summarize prompt
